--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,3 +18,16 @@ services:
             - 8080:8080
         environment:
             ADMINER_DESIGN: pepa-linha
+
+    elasticsearch:
+        image: elasticsearch:7.3.1
+        environment:
+            - discovery.type=single-node
+
+    kibana:
+        image: kibana:7.3.1
+        ports:
+            - 5601:5601
+    
+    apmserver:
+        image: docker.elastic.co/apm/apm-server:7.3.1
