--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,7 +33,9 @@ services:
         image: docker.elastic.co/apm/apm-server:7.3.1
 
     app:
-        build: ./app
+        build:
+            context: ./app
+            dockerfile: ./build/Dockerfile
         ports:
             - 80:80
         environment:
