--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,18 +28,50 @@ services:
     ports:
       - 5601:5601
 
+  metricbeat:
+    image: docker.elastic.co/beats/metricbeat:7.11.1
+    environment:
+      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
+    volumes:
+      - metricbeat-volume:/usr/share/metric/data
+
   apmserver:
     image: docker.elastic.co/apm/apm-server:7.3.1
+
+  nginx:
+    image: nginx
+    ports:
+      - 80:80
+    volumes:
+      - ./misc/nginx.conf:/etc/nginx/nginx.conf
+    environment:
+      - NGINX_PORT=80
 
   instrumentality:
     build: .
     ports:
-      - 8080:8080
+      - 8080
+    deploy:
+      mode: replicated
+      replicas: 3
     environment:
       - ELASTIC_APM_SERVER_URL=http://apmserver:8200
       - ELASTIC_APM_SERVICE_NAME=instrumentality
       - ELASTIC_APM_ENVIRONMENT=docker
       - MONGODB_HOST=mongodb://mongodb:27017
+      - DYNAMODB_HOST=
+
+  dynamodb:
+    image: "amazon/dynamodb-local:1.22.0"
+    command: "-jar DynamoDBLocal.jar -dbPath ./data -sharedDb"
+    working_dir: /home/dynamodblocal
+    ports:
+      - 4579:8000
+    volumes:
+      - dynamodb-data:/home/dynamodblocal/data
+    user: root
 
 volumes:
   mongodbdata:
+  dynamodb-data:
+  metricbeat-volume:
