--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,12 +1,25 @@
 version: "3.8"
 services:
-  aiko:
-    image: mahtues/aiko
-    build:
-      context: .
-      target: aiko-release
-    deploy:
-      replicas: 5
+  nginx:
+    image: nginx
+    ports:
+    - 2112:2112
+    volumes:
+    - ./z-docker-compose-configs/nginx/nginx.conf:/etc/nginx/nginx.conf
+
+  nginx-prometheus-exporter:
+    image: nginx/nginx-prometheus-exporter
+    command:
+    - -nginx.scrape-uri
+    - http://nginx:9113/stub_status
+
+  prometheus:
+    image: prom/prometheus
+    ports:
+    - 9090:9090
+    volumes:
+    - prometheus-data:/prometheus
+    - ./z-docker-compose-configs/prometheus/prometheus.yaml:/etc/prometheus/prometheus.yml
 
   grafana:
     image: grafana/grafana
@@ -15,13 +28,13 @@ services:
     volumes:
     - grafana-storage:/var/lib/grafana
 
-  prometheus:
-    image: prom/prometheus
-    ports:
-    - 9090:9090
-    volumes:
-    - prometheus-data:/prometheus
-    - ./zconfigs/prometheus/prometheus.yaml:/etc/prometheus/prometheus.yml
+  aiko:
+    image: mahtues/aiko
+    build:
+      context: .
+      target: aiko-release
+    deploy:
+      replicas: 5
 
 volumes:
   grafana-storage:
