--- a/z-docker-compose-configs/prometheus/prometheus.yaml
+++ b/z-docker-compose-configs/prometheus/prometheus.yaml
@@ -1,4 +1,8 @@
 scrape_configs:
+- job_name: nginx-exporter
+  scrape_interval: 10s
+  static_configs:
+  - targets: ['nginx-prometheus-exporter:9113']
 - job_name: aiko
   scrape_interval: 10s
   dns_sd_configs:
